--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -46,7 +46,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_pass   php:9000;
-        fastcgi_index  index.php;
+        fastcgi_index  admin.php;
         fastcgi_param  SCRIPT_FILENAME  /www/guild_3yakj_com/public/$fastcgi_script_name;
         include        fastcgi_params;
     }
