--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     
 
     location ~ \.php$ {
-        fastcgi_pass   php:9000;
+        fastcgi_pass   172.17.0.6:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /www/3y-php-docker/public/$fastcgi_script_name;
         include        fastcgi_params;
@@ -26,7 +26,7 @@ server {
 	}    
 
     location ~ \.php$ {
-        fastcgi_pass   php:9000;
+        fastcgi_pass   172.17.0.6:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /www/fanjiaoyl/public/$fastcgi_script_name;
         include        fastcgi_params;
@@ -45,7 +45,7 @@ server {
 	}    
 
     location ~ \.php$ {
-        fastcgi_pass   php:9000;
+        fastcgi_pass   172.17.0.6:9000;
         fastcgi_index  admin.php;
         fastcgi_param  SCRIPT_FILENAME  /www/guild_3yakj_com/public/$fastcgi_script_name;
         include        fastcgi_params;
@@ -65,7 +65,7 @@ server {
 
 
     location ~ \.php$ {
-        fastcgi_pass   php:9000;
+        fastcgi_pass   172.17.0.6:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /www/statis_3y/public/$fastcgi_script_name;
         include        fastcgi_params;
