--- a/php/php.ini
+++ b/php/php.ini
@@ -920,7 +920,7 @@ extension=mysqli
 ;extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
 ;extension=odbc
-extension=openssl
+;extension=openssl
 ;extension=pdo_firebird
 extension=pdo_mysql
 ;extension=pdo_oci
@@ -931,6 +931,7 @@ extension=pdo_mysql
 ;extension=shmop
 extension=redis.so
 extension=mongodb.so
+;extension=amqp.so
 ;extension=php_gd2.dll
 
 
