--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-php: 
-    image: php:v3
-    ports: 
-     - "127.0.0.1:9000:9000"
-    volumes: 
-     - "D:/phpstudy_zj/WWW:/www"
-     - "D:/phpstudy_zj/docker/php:/usr/local/etc/php/"
-     
-nginx: 
-    image: nginx
-    links: 
-     - php
-    ports: 
-     - "127.0.0.1:80:80"
-    working_dir: /www
-    volumes: 
-     - "D:/phpstudy_zj/docker/nginx/conf/conf.d:/etc/nginx/conf.d"
-     - "D:/phpstudy_zj/WWW:/www"
+version: "3"
+services:
+    php: 
+        image: 450453892/php
+        container_name: zj_php
+        ports: 
+         - 9000:9000
+        volumes: 
+         - "${SOURCE_DIR}:/www"
+         - "${PHP_DIR}:/usr/local/etc/php"
+         
+    nginx: 
+        image: nginx
+        container_name: zj_nginx
+        ports: 
+         - 80:80
+        working_dir: /www
+        volumes: 
+         - "${NGINX_CONFD_DIR}:/etc/nginx/conf.d"
+         - "${SOURCE_DIR}:/www"
