--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ PHP_DIR = E:/DEV/docker/php
 NGINX_CONFD_DIR = E:/DEV/docker/nginx/conf/conf.d
 NGINX_CONF_FILE = E:/DEV/docker/nginx/conf/nginx.conf
 NGINX_LOG_DIR = E:/DEV/docker/nginx/log/nginx
+
+MYSQL = E:/DEV/docker/mysql/mysql
+MYSQL_CONF = E:/DEV/docker/mysql/confd
+MYSQL_MY_CONF = E:/DEV/docker/mysql/myconf
