--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3"
 services:
     php: 
-        image: 450453892/php
+        image: 450453892/php:v4
         container_name: zj_php
         ports: 
          - 9000:9000
+         - 8686:8686
         volumes: 
          - "${SOURCE_DIR}:/www"
          - "${PHP_DIR}:/usr/local/etc/php"
