--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-SOURCE_DIR = E:/DEV/WWW
-PHP_DIR = E:/DEV/docker/php
+SOURCE_DIR = G:/DEV/WWW
+PHP_DIR = G:/DEV/docker/php
 
-NGINX_CONFD_DIR = E:/DEV/docker/nginx/conf/conf.d
-NGINX_CONF_FILE = E:/DEV/docker/nginx/conf/nginx.conf
-NGINX_LOG_DIR = E:/DEV/docker/nginx/log/nginx
+NGINX_CONFD_DIR = G:/DEV/docker/nginx/conf/conf.d
+NGINX_CONF_FILE = G:/DEV/docker/nginx/conf/nginx.conf
+NGINX_LOG_DIR = G:/DEV/docker/nginx/log/nginx
 
-MYSQL = E:/DEV/docker/mysql/mysql
-MYSQL_CONF = E:/DEV/docker/mysql/confd
-MYSQL_MY_CONF = E:/DEV/docker/mysql/myconf
+MYSQL = G:/DEV/docker/mysql/mysql
+MYSQL_CONF = G:/DEV/docker/mysql/confd
+MYSQL_MY_CONF = G:/DEV/docker/mysql/myconf
