gd库配置注意事项

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-SOURCE_DIR = G:/DEV/WWW
-PHP_DIR = G:/DEV/docker/php
+SOURCE_DIR = /Users/zhujun/work
+PHP_DIR = /Users/zhujun/docker/php
 
-NGINX_CONFD_DIR = G:/DEV/docker/nginx/conf/conf.d
-NGINX_CONF_FILE = G:/DEV/docker/nginx/conf/nginx.conf
-NGINX_LOG_DIR = G:/DEV/docker/nginx/log/nginx
+NGINX_CONFD_DIR = /Users/zhujun/docker/nginx/conf/conf.d
+NGINX_CONF_FILE = /Users/zhujun/docker/nginx/conf/nginx.conf
+NGINX_LOG_DIR = G/Users/zhujun/docker/nginx/log/nginx
 
-MYSQL = G:/DEV/docker/mysql/mysql
-MYSQL_CONF = G:/DEV/docker/mysql/confd
-MYSQL_MY_CONF = G:/DEV/docker/mysql/myconf
+MYSQL = /Users/zhujun/docker/mysql/mysql
+MYSQL_CONF = /Users/zhujun/docker/mysql/confd
+MYSQL_MY_CONF = /Users/zhujun/docker/mysql/myconf
