--- a/mongoDB/docker-compose.yml
+++ b/mongoDB/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
   rs1:
-    image: mongo:latest
+    image: mongo:4.0
     ports: 
      - 27017:27017
     volumes:
       - "G:/DEV/docker/mongoDB/rs1:/data"
     command: mongod  --dbpath /data/db --logpath=/data/log/rs1.log --logappend --replSet rs1
   rs2:
-    image: mongo:latest
+    image: mongo:4.0
     ports: 
      - 27018:27017
     volumes:
       - "G:/DEV/docker/mongoDB/rs2:/data"
     command: mongod  --dbpath /data/db --logpath=/data/log/rs2.log --logappend --replSet rs1
   rs3:
-    image: mongo:latest
+    image: mongo:4.0
     ports: 
      - 27019:27017
     volumes:
