--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -15,6 +15,26 @@ server {
 
 server {
     listen       80;
+    server_name  finance.test;
+	index index.php index.html index.htm default.php default.htm default.html;
+	root   /www/finance_3yakj_com/public;
+
+	location / {
+		if (!-e $request_filename){
+			rewrite  ^(.*)$  /index.php?s=$1  last;   break;
+		}
+	}    
+
+    location ~ \.php$ {
+        fastcgi_pass   172.18.0.1:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /www/finance_3yakj_com/public/$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+}
+
+server {
+    listen       80;
     server_name  manager.test;
 	index index.php index.html index.htm default.php default.htm default.html;
 	root   /www/fanjiaoyl/public;
