--- a/docker-beike/docker-compose.yaml
+++ b/docker-beike/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - 8887:8887
     volumes:
-      - ./:/var/www
+      - ../../www/beiKe:/var/www
     tty: true
 
   beike-redis:
